bloonix-agent (0.59) released at 2015-08-28

    * Moved postinst parts into bloonix-init-agent.

bloonix-agent (0.58) released at 2015-08-18

    * Moved all sudo files to /etc/sudoers.d.

bloonix-agent (0.57) released at 2015-08-18

    * Fixed %preun section in spec file.
    * Moved the creation of user bloonix into the core package.

bloonix-agent (0.56) released at 2015-08-06

    * Updated mk_arrays to mk_array_accessors.
    * License information for Strawberry Perl added.

bloonix-agent (0.55) released at 2015-06-16

    * The agent passes now the host and service id via options
      --bloonix-host-id and --bloonix-service-id by default to
      all bloonix plugins.

bloonix-agent (0.54) released at 2015-06-16

    * Implemented support for Windows.
    * Expand sudoers settings for bloonix.

bloonix-agent (0.53) released at 2015-04-22

    * Fixed parsing of command options.

bloonix-agent (0.52) released at 2015-04-14

    * Satellite configuration parameters implemented.

bloonix-agent (0.51) released at 2015-04-07

    * Fixed bloonix-init-host and implemented Bloonix::IO::SIPC.

bloonix-agent (0.50) released at 2015-03-21

    * Implemented Bloonix::IO::SIPC as replacement for Bloonix:REST.

bloonix-agent (0.49) released at 2015-03-09

    * Improved parsing of nagios statistics.
    * Fixed uninizialied value host_id in get_services().
    * An empty host list is now allowed.
    * Fixed bloonix-init-host: the server response is
      now parsed correctly.
    * Added a default sudoers file for the bloonix agent.

bloonix-agent (0.48) released at 2015-01-27

    * Fixed permissions of bloonix-agent.log.

bloonix-agent (0.47) released at 2015-01-26

    * Fixed: Can't call method "notice" on an undefined value
      at /usr/share/perl5/Bloonix/Agent.pm line 81

bloonix-agent (0.46) released at 2015-01-26

    * Fixed creation of bloonix-agent.log.

bloonix-agent (0.45) released at 2014-12-23

    * Fixed reload function.
