@@ -1,3 +1,8 @@
+bloonix-agent (0.60) released at 2015-09-14
+
+    * Did some performance improvements and implemented the parameter
+      max_concurrent_hosts.
+
 bloonix-agent (0.59) released at 2015-08-28
 
     * Moved postinst parts into bloonix-init-agent.
